--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <!-- Im header wird der Kopf der Webseite angegeben.
             Dies ist aber nur ein Struktur-Element. Damit der Header auch immer
             ganz oben angezeigt wird, braucht es noch das richtige CSS dafür. -->
-            <h1>Webseite von ...</h1>
+            <h1>Webseite von Sophie Kienhöfer</h1>
         </header>
 
         <nav>
