--- a/pages/hobbies.html
+++ b/pages/hobbies.html
@@ -4,9 +4,20 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Meine Hobbies</title>
+
+        <link rel="stylesheet" href="../style.css" />
     </head>
     <body>
         <a href="/">Home</a>
         <h1>Meine Hobbies</h1>
     </body>
+    <section>
+        In meiner Freizeit backe ich gerne und oft. Meisteins benutze ich hier
+        die Website
+        <a href="https://www.einfachbacken.de/backrezepte">einfachbacken</a>.
+    </section>
+    <p>
+        Danke für ihre Zeit. herzchen HONEY HONEY HOW HE THRILLS ME UH HUH HONEY
+        HONEY
+    </p>
 </html>
