--- a/pages/hobbies.html
+++ b/pages/hobbies.html
@@ -14,10 +14,18 @@
     <section>
         In meiner Freizeit backe ich gerne und oft. Meisteins benutze ich hier
         die Website
-        <a href="https://www.einfachbacken.de/backrezepte">einfachbacken</a>.
+        <a target="_blank" href="https://www.einfachbacken.de/backrezepte"
+            >einfachbacken</a
+        >.
     </section>
     <p>
-        Danke für ihre Zeit. herzchen HONEY HONEY HOW HE THRILLS ME UH HUH HONEY
-        HONEY
+        Sonst zeichne und lese ich gerne. Währenddessen höre ich oft Musik. Am
+        liebsten höre ich hier David Bowie, Abba, Billie Eilish, Poppy und Sex
+        Pistols
+        <a
+            target="_blank"
+            href="https://open.spotify.com/playlist/1a4Jtk7Zc83tlwjmWpTVB1?si=8T7PyvzJSF6Eg0ySAIoLVA&pi=e-p8fhpNClT4yA"
+            >meine Playlist</a
+        >.
     </p>
 </html>
