--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
                 <li>
                     <a href="./pages/hobbies.html">Hobbies</a>
                 </li>
+
+                <li>
+                    <a href="./pages/test.html">Test</a>
+                </li>
             </ul>
         </nav>
 
