--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </li>
 
                 <li>
-                    <a href="./pages/test.html">Test</a>
+                    <a href="./pages/books.html">Books</a>
                 </li>
             </ul>
         </nav>
