--- a/pages/books.html
+++ b/pages/books.html
@@ -9,6 +9,10 @@
     </head>
     <body>
         <a href="/">Home</a>
-        <h1>Test</h1>
+        <h1>Books</h1>
     </body>
+    <section>
+        Hier schreibe ich über Bücher welche ich gelesen habe und wie ich sie
+        fand.
+    </section>
 </html>
