book image change

--- a/pages/books.html
+++ b/pages/books.html
@@ -10,9 +10,23 @@
     <body>
         <a href="/">Home</a>
         <h1>Books</h1>
+        <section>
+            Hier schreibe ich über Bücher welche ich gelesen habe und wie ich
+            sie fand.
+        </section>
+        <section>
+            <div class="text-and-img">
+                <div class="image small-img">
+                    <img
+                        src="https://images.thalia.media/00/-/a4ee85b513e3449e923be7c1ee6114cf/wir-kinder-vom-bahnhof-zoo-taschenbuch-kai-hermann.jpeg"
+                        alt=""
+                    />
+                </div>
+                <div class="text">
+                    Hier ist eine Beschreibung von dem Bild, oder einfach Text
+                    der dazu passen könnte.
+                </div>
+            </div>
+        </section>
     </body>
-    <section>
-        Hier schreibe ich über Bücher welche ich gelesen habe und wie ich sie
-        fand.
-    </section>
 </html>
