--- a/pages/books.html
+++ b/pages/books.html
@@ -23,8 +23,10 @@
                     />
                 </div>
                 <div class="text">
-                    Hier ist eine Beschreibung von dem Bild, oder einfach Text
-                    der dazu passen könnte.
+                    In wir Kinder von Bahnhof Zoo geht es um Christiane F.
+                    welche bereits mit 14 Jahren Heroin Abhängig wird. Man
+                    begleitet sie von ihrem ersten Haschisch-Gebrauch, mit
+                    13-Jahren, bis hin zu ihrem Tiefpunkt, mit 15 Jahren.
                 </div>
             </div>
         </section>
