--- a/index.html
+++ b/index.html
@@ -41,14 +41,42 @@
                     stroke="white"
                 />
 
-                <circle r="70" fill="hotpink">
+                <circle r="70" fill="lightblue">
                     <animateMotion dur="5s" repeatCount="indefinite">
                         <mpath xlink:href="#circle-motion" />
                     </animateMotion>
                 </circle>
 
-                <circle r="40" fill="pink">
-                    <animateMotion dur="7s" repeatCount="indefinite">
+                <image
+                    transform="translate(-50 -50)"
+                    height="100"
+                    width="100"
+                    href="https://images.artfulcloud.com/107553_5144998xl.jpg?sold=Sold&hdots=False&v=202305011524&cv=20230103091437.png"
+                >
+                    <image
+                        xlink:href="https://images.artfulcloud.com/107553_5144998xl.jpg?sold=Sold&hdots=False&v=202305011524&cv=20230103091437.png"
+                        width="100%"
+                        height="100%"
+                        clip-path="inset(0% round 15px)"
+                    ></image>
+                    <animateMotion dur="5s" repeatCount="indefinite">
+                        <mpath xlink:href="#circle-motion" />
+                    </animateMotion>
+                </image>
+
+                <circle r="20" fill="darkblue">
+                    <animateMotion dur="9s" repeatCount="indefinite">
+                        <mpath xlink:href="#circle-motion" />
+                    </animateMotion>
+                </circle>
+
+                <circle
+                    r="30"
+                    fill="transparent"
+                    stroke="darkblue"
+                    stroke-width="5"
+                >
+                    <animateMotion dur="9s" repeatCount="indefinite">
                         <mpath xlink:href="#circle-motion" />
                     </animateMotion>
                 </circle>
@@ -98,7 +126,10 @@
                         Text der dazu passen könnte.
                     </div>
                     <div class="image">
-                        <img src="/img/mountains.png" alt="" />
+                        <img
+                            src="https://images.artfulcloud.com/107553_5144998xl.jpg?sold=Sold&hdots=False&v=202305011524&cv=20230103091437.png"
+                            alt=""
+                        />
                     </div>
                 </div>
             </section>
